@@ -85,6 +85,7 @@
 	- fix: typo in find-requires.
 	- tru64 compiler message cleanup.
 	- add buildarch lines for hppa (#57728).
+	- sparc: make dbenv per-rpmdb, not per-dbi.
 
 4.0.2 -> 4.0.3:
 	- update per-interpreter dependency scripts, add sql/tcl (#20295).
